--- a/index.html
+++ b/index.html
@@ -383,5 +383,6 @@
             <button>Sign Up</button>
         </div>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </body>
 </html>
