--- a/index.html
+++ b/index.html
@@ -384,5 +384,6 @@
         </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="./idnex.js"></script>
 </body>
 </html>
